@@ -1,5 +1,5 @@
 #source: arch-10.s
-#as: -march=btver2+smx+vmx+ept+clflush+svme+padlock+fma+tbm
+#as: -march=btver2+smx+vmx+ept+padlock+fma+tbm
 #objdump: -dw
 #name: i386 arch 10 (btver2)
 
